--- a/frontend/myridehub/index.html
+++ b/frontend/myridehub/index.html
@@ -1,2 +1,2 @@
 <title>Ride Hub | Rent and Book Vehicles</title>
-<link rel="icon" type="image/png" href="/Ride Hub Logo (Dark).png" />
+<link rel="icon" type="image/png" href="/Ride Hub Logo (White).png" />
