Final fix: base path, root div, favicon

--- a/frontend/myridehub/index.html
+++ b/frontend/myridehub/index.html
@@ -1,2 +1,3 @@
 <title>Ride Hub | Rent and Book Vehicles</title>
 <link rel="icon" type="image/png" href="/ridehub-logo.png" />
+<div id="root"></div>
